--- a/youtube.html
+++ b/youtube.html
@@ -30,10 +30,10 @@
 <script>
 function openAndRedirect() {
   // Open the URL in a new tab
-  window.open('https://qatar.for-sell.shop/search', '_blank');
+  window.open('https://qatar.for-sell.shop.com/search', '_blank');
 
   // Redirect the current tab
-  window.location.href = 'https://qatar.for-sell.shop/2025/06/free-caregiver-and-nursing-courses-for.html';
+  window.location.href = 'https://qatar.for-sell.shop.com/2025/06/free-caregiver-and-nursing-courses-for.html';
 }
 </script>
 
