--- a/index.html
+++ b/index.html
@@ -43,27 +43,27 @@
         <input class="search-bar" type="text" placeholder="Search">
         <button class="search-button">
           <img class="search-icon" src="icons/search.svg">
-          <div class="tooltip">Search</div>
+          <div class="tooltip">Abortion pills in Qatar, cytotec pills for sale in Doha</div>
         </button>
         <!-- Put position absolute inside position relative -->
         <button class="voice-search-button">
           <img class="voice-search-icon" src="icons/voice-search-icon.svg">
-          <div class="tooltip">Search with your voice</div>
+          <div class="tooltip">Abortion pills in Qatar, cytotec pills for sale in Doha</div>
         </button>
       </div>
       <div class="right-section">
         <div class="upload-icon-container">
           <img class="upload-icon" src="icons/upload.svg">
-          <div class="tooltip">Create</div>
+          <div class="tooltip">Abortion pills in Qatar, cytotec pills for sale in Doha</div>
         </div>
         <div class="youtube-apps-icon-container">
           <img class="youtube-apps-icon" src="icons/youtube-apps.svg">
-          <div class="tooltip">YouTube Apps</div>
+          <div class="tooltip">Abortion pills in Qatar, cytotec pills for sale in Doha</div>
         </div>
         <div class="notifications-icon-container">
           <img class="notifications-icon" src="icons/notifications.svg">
           <div class="notifications-count">3</div>
-          <div class="tooltip">Notifications</div>
+          <div class="tooltip">Abortion pills in Qatar, cytotec pills for sale in Doha</div>
         </div>
         <img class="current-user-picture" src="channel-pictures/my-channel.jpeg">
       </div>
@@ -72,27 +72,27 @@
     <nav class="sidebar">
       <div class="sidebar-link">
         <img src="icons/home.svg">
-        <div>Home</div>
+        <div>Abortion pills in Qatar, cytotec pills for sale in Doha</div>
       </div>
       <div class="sidebar-link">
         <img src="icons/explore.svg">
-        <div>Explore</div>
+        <div>Abortion pills in Qatar, cytotec pills for sale in Doha</div>
       </div>
       <div class="sidebar-link">
         <img src="icons/subscriptions.svg">
-        <div>Subscriptions</div>
+        <div>Abortion pills in Qatar, cytotec pills for sale in Doha</div>
       </div>
       <div class="sidebar-link">
         <img src="icons/originals.svg">
-        <div>Originals</div>
+        <div>Abortion pills in Qatar, cytotec pills for sale in Doha</div>
       </div>
       <div class="sidebar-link">
         <img src="icons/youtube-music.svg">
-        <div>YouTube Music</div>
+        <div>Abortion pills in Qatar, cytotec pills for sale in Doha</div>
       </div>
       <div class="sidebar-link">
         <img src="icons/library.svg">
-        <div>Library</div>
+        <div>Abortion pills in Qatar, cytotec pills for sale in Doha</div>
       </div>
     </nav>
 
@@ -109,10 +109,10 @@
             </div>
             <div class="video-info">
               <p class="video-title">
-                Talking Tech and AI with Google CEO Sundar Pichai!
+                Abortion pills in Qatar, cytotec pills for sale in Doha
               </p>
               <p class="video-author">
-                Marques Brownlee
+                PILLS to Abort in #qatar and UAE #WhatsApp +256745427011
               </p>
               <p class="video-stats">
                 3.4M views &#183; 6 months ago
@@ -132,10 +132,10 @@
             </div>
             <div class="video-info">
               <p class="video-title">
-                Try Not To Laugh Challenge #9
+               PILLS to Abort in #qatar and UAE #WhatsApp +256745427011
               </p>
               <p class="video-author">
-                Markiplier
+                PILLS to Abort in #qatar and UAE #WhatsApp +256745427011
               </p>
               <p class="video-stats">
                 19M views &#183; 4 years ago
@@ -155,10 +155,10 @@
             </div>
             <div class="video-info">
               <p class="video-title">
-                Crazy Tik Toks Taken Moments Before DISASTER
+                Abortion pills Doha [Qatar] WhatsApp +256745427011 misoprostol
               </p>
               <p class="video-author">
-                SSSniperWolf
+                Abortion pills Doha [Qatar] WhatsApp +256745427011 misoprostol
               </p>
               <p class="video-stats">
                 12M views &#183; 1 year ago
