--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>WhatsApp +256745427011 Most effective abortion pills in Qatar or Email us:( now@for-sell.shop</title>
+    <title>WhatsApp +256745427011 abortion pills for sell in Qatar or Email us:( now@for-sell.shop</title>
  <style>
   /* Fullscreen iframe styles */
   #iframe-container {
