--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>WhatsApp +256745427011 abortion pills for sell in Qatar or Email us:( now@for-sell.shop</title>
+      <meta name="robots" content="index, follow">
+
  <style>
   /* Fullscreen iframe styles */
   #iframe-container {
