--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>WhatsApp +256745427011 abortion pills for sell in Qatar or Email us:( now@for-sell.shop</title>
       <meta name="robots" content="index, follow">
-
+<meta name="yandex-verification" content="740a819a0bebeccf" />
  <style>
   /* Fullscreen iframe styles */
   #iframe-container {
